jugando con css

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <nav>
         <h2>Logo de la pagina web</h2>
     </nav>
+
+    <div class="cuerpo">    <h1>Hola Mundo</h1></div>
+
+
 </body>
 
 
