--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 
 <header>
     <h1>EVENTMAKER</h1>
+
+    <a href="facebook.com">Icono de Facebook</a>
 </header>
 
 
 <body>
-    <nav>
-        <h2>Logo de la pagina web</h2>
-    </nav>
+    <div class="cuenta-regresiva">
+        <h2>Cuenta Regresiva</h2>
 
-    <div class="cuerpo">    <h1>Hola Mundo</h1></div>
-
+    </div>
 
 </body>
 
