--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
 </head>
 
 <header>
-    <h1>EVENTMAKER</h1>
+        <h1>EVENTMAKER</h1> 
 </header>
 
+<h2>La mejor pagina de deportes </h2>   
 
 <body>
-    <nav>
-        <h2>Logo de la pagina web</h2>
-    </nav>
+    <div class="Cuenta Regresiva">
+        <h3>Cuenta Regresiva</h2>
+        <h4>Esto lo modifico Kevin</h3>
+    </div>
 </body>
-
 
 
 <footer>
