--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EventMaker</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <header>
-<<<<<<< HEAD
-    <h1>EVENTMAKER</h1>
+    <div class="hero">
+        <h1>EVENTMAKER</h1>
 
-    <a href="facebook.com">Icono de Facebook</a>
-=======
-        <h1>EVENTMAKER</h1> 
+        <a href="facebook.com">Icono de Facebook</a>
 
+        
+    </div>
 </header>
 
 <h2>La mejor pagina de deportes </h2>   
