--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <header>
     <div class="hero">
         <h1>EVENTMAKER</h1>
-
-        <a href="facebook.com">Icono de Facebook</a>
+        <nav class="redes-sociales">
+            <a href="facebook.com">Icono de Facebook</a>
+        </nav>
 
         
     </div>
