--- a/invitados.html
+++ b/invitados.html
@@ -1,3 +1,27 @@
-<footer></footer>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Transicion de encabezado </title>
+<link rel="stylesheet" href="css/Estilos.css">
+</head>
+<body>
+    <header>
+        <h1>BIENVENIDO A <i>EVENTMAKER</i>   </h1>
+        <nav>
+            <a href="#">Inicio </a>
+            <a href="#">Tutoriales</a>
+            <a href="#">Blog</a>
+            <a href="#">Contactos</a>
+        </nav>
+    </header>
 
-<header></header>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="js/script.js"></script>
+</body>
+
+
+
+
+
+</html>
