--- a/Calendario.html
+++ b/Calendario.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Transicion de encabezado </title>
-<link rel="stylesheet" href="css/Estilos.css">
+<title>Calendario</title>
+<link rel="stylesheet" href="css/Calendario.css">
 </head>
 <body>
     <header>
-        <h1>BIENVENIDO A <i>EVENTMAKER</i>   </h1>
+        <h1>BIENVENIDO A EL CALENDARIO DE EVENTOS</h1>
         <nav>
             <a href="file:///C:/Users/kevin%20Madrid/Desktop/Event/index.html">Inicio </a>
             <a href="C:/Users/kevin%20Madrid/Desktop/Event/invitados.html#">Tutoriales</a>
@@ -20,9 +20,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="js/script.js"></script>
 </body>
-
-
-
 
 
 </html>
