--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="hero">
         <h1>EVENTMAKER</h1>
         <nav class="redes-sociales">
-            <a href="https://www.facebook.com/ACOSAHN">Icono de Facebook</a>
-            <a href="Instagram.com">Icono de Instagram</a>
-            <a href="Twiter.com">Icono de Twiter</a>
-            <a href="TikTok.com">Icono de TikTok</a>
+            <a href="https://www.facebook.com/">Icono de Facebook</a>
+            <a href="https://www.instagram.com/">Icono de Instagram</a>
+            <a href="https://twitter.com/">Icono de Twiter</a>
+            <a href="https://www.tiktok.com/">Icono de TikTok</a>
 
         </nav>
 
