--- a/index.html
+++ b/index.html
@@ -10,28 +10,25 @@
 
 <header>
     <div class="hero">
-        <h1>EVENTMAKER</h1>
+        <h1>        EVENTMAKER</h1>
         <nav class="redes-sociales">
-            <a href="https://www.facebook.com/">Icono de Facebook</a>
-            <a href="https://www.instagram.com/">Icono de Instagram</a>
-            <a href="https://twitter.com/">Icono de Twiter</a>
-            <a href="https://www.tiktok.com/">Icono de TikTok</a>
-
+            <a href="https://www.facebook.com/">Facebook</a>
+            <a href="https://www.instagram.com/">Instagram</a>
+            <a href="https://twitter.com/">Twiter</a>
+            <a href="https://www.tiktok.com/">TikTok</a>
+            <a href="https://www.youtube.com/">Youtube</a>
         </nav>
-
-        
+        <nav>
+            <a href="file:///C:/Users/kevin%20Madrid/Desktop/Event/index.html">Inicio </a>
+            <a href="C:/Users/kevin%20Madrid/Desktop/Event/invitados.html#">Tutoriales</a>
+            <a href="C:/Users/kevin%20Madrid/Desktop/Event/Calendario.html#">Calendario</a>
+            <a href="#">Blog</a>
+            <a href="#">Contactos</a>
+        </nav>
+    
     </div>
 </header>
 
-<style>
-    #Counter {  
-      width: 25%;
-      height: 25px;
-      background-color: #bbbdbb; 
-      font-size:larger;
-    }
-        background-color:rgb(184, 181, 181); }
- </style>
 
 <h2>La mejor pagina de deportes </h2>   
 
