--- a/Calendario.html
+++ b/Calendario.html
@@ -9,9 +9,9 @@
     <header>
         <h1>BIENVENIDO A EL CALENDARIO DE EVENTOS</h1>
         <nav>
-            <a href="file:///C:/Users/kevin%20Madrid/Desktop/Event/index.html">Inicio </a>
-            <a href="C:/Users/kevin%20Madrid/Desktop/Event/invitados.html#">Tutoriales</a>
-            <a href="C:/Users/kevin%20Madrid/Desktop/Event/Calendario.html#">Calendario</a>
+            <a href="index.html">Inicio </a>
+            <a href="invitados.html">Invitados</a>
+            <a href="Calendario.html">Calendario</a>
             <a href="#">Blog</a>
             <a href="#">Contactos</a>
         </nav>
