--- a/invitados.html
+++ b/invitados.html
@@ -4,24 +4,34 @@
 <meta charset="UTF-8">
 <title>Transicion de encabezado </title>
 <link rel="stylesheet" href="css/Estilos.css">
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="js/script.js"></script>
 </head>
-<body>
-    <header>
-        <h1>BIENVENIDO A <i>EVENTMAKER</i>   </h1>
-        <nav>
-            <a href="file:///C:/Users/kevin%20Madrid/Desktop/Event/index.html">Inicio </a>
-            <a href="C:/Users/kevin%20Madrid/Desktop/Event/invitados.html#">Tutoriales</a>
-            <a href="C:/Users/kevin%20Madrid/Desktop/Event/Calendario.html#">Calendario</a>
-            <a href="#">Blog</a>
-            <a href="#">Contactos</a>
-        </nav>
-    </header>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="js/script.js"></script>
+
+
+<header>
+    <h1>BIENVENIDO A <i>EVENTMAKER</i>   </h1>
+    <nav>
+        <a href="index.html">Inicio </a>
+        <a href="invitados.html">Invitados</a>
+        <a href="Calendario.html">Calendario</a>
+        <a href="#">Blog</a>
+        <a href="#">Contactos</a>
+    </nav>
+</header>
+
+<body>
+
+
+
+
+
+
+
 </body>
 
-
+    
 
 
 
