--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
         <nav>
             <a href="file:///C:/Users/kevin%20Madrid/Desktop/Event/index.html">Inicio </a>
-            <a href="C:/Users/kevin%20Madrid/Desktop/Event/invitados.html#">Tutoriales</a>
+            <a href="C:/Users/kevin%20Madrid/Desktop/Event/invitados.html#">Invitados</a>
             <a href="C:/Users/kevin%20Madrid/Desktop/Event/Calendario.html#">Calendario</a>
             <a href="#">Blog</a>
             <a href="#">Contactos</a>
