--- a/invitados.html
+++ b/invitados.html
@@ -10,7 +10,7 @@
         <h1>BIENVENIDO A <i>EVENTMAKER</i>   </h1>
         <nav>
             <a href="file:///C:/Users/kevin%20Madrid/Desktop/Event/index.html">Inicio </a>
-            <a href="C:/Users/kevin%20Madrid/Desktop/Event/invitados.html#">Tutoriales</a>
+            <a href="C:/Users/kevin%20Madrid/Desktop/Event/invitados.html#">Invitados</a>
             <a href="C:/Users/kevin%20Madrid/Desktop/Event/Calendario.html#">Calendario</a>
             <a href="#">Blog</a>
             <a href="#">Contactos</a>
