--- a/Calendario.html
+++ b/Calendario.html
@@ -4,21 +4,21 @@
 <meta charset="UTF-8">
 <title>Calendario</title>
 <link rel="stylesheet" href="css/Calendario.css">
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="js/script.js"></script>
 </head>
+<header>
+    <h1>BIENVENIDO A EL CALENDARIO DE EVENTOS</h1>
+    <nav>
+        <a href="file:///C:/Users/kevin%20Madrid/Desktop/Event/index.html">Inicio </a>
+        <a href="C:/Users/kevin%20Madrid/Desktop/Event/invitados.html#">Invitados</a>
+        <a href="C:/Users/kevin%20Madrid/Desktop/Event/Calendario.html#">Calendario</a>
+        <a href="#">Blog</a>
+        <a href="#">Contactos</a>
+    </nav>
+</header>
 <body>
-    <header>
-        <h1>BIENVENIDO A EL CALENDARIO DE EVENTOS</h1>
-        <nav>
-            <a href="file:///C:/Users/kevin%20Madrid/Desktop/Event/index.html">Inicio </a>
-            <a href="C:/Users/kevin%20Madrid/Desktop/Event/invitados.html#">Tutoriales</a>
-            <a href="C:/Users/kevin%20Madrid/Desktop/Event/Calendario.html#">Calendario</a>
-            <a href="#">Blog</a>
-            <a href="#">Contactos</a>
-        </nav>
-    </header>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="js/script.js"></script>
+   <h2>Calendario</h2>
 </body>
 
 
