--- a/invitados.html
+++ b/invitados.html
@@ -23,15 +23,29 @@
 
 <body>
 
+<div class= "invitar">
+<h2>Invitar amigos</h2>
 
+</div>
+////////////////////////////////////////////////////
 
+</br>
+<div class= "Amigos">
+<h2>Ver amigos</h2>
+
+</div>
+
+////////////////////////////////////////////////////
+
+</br>
+<div class= "Seguidores">
+<h2>Seguidores</h2>
+</div>
 
 
 
 
 </body>
-
-    
 
 
 
