--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="hero">
         <h1>EVENTMAKER</h1>
         <nav class="redes-sociales">
-            <a href="https://www.facebook.com/ACOSAHN">Icono de Facebook</a>
+            <link  rel="icon"   href="img/facebook.png" type="image/png" />
             <a href="Instagram.com">Icono de Instagram</a>
             <a href="Twiter.com">Icono de Twiter</a>
             <a href="TikTok.com">Icono de TikTok</a>
