--- a/invitados.html
+++ b/invitados.html
@@ -26,6 +26,8 @@
 <div class= "invitar">
 <h2>Invitar amigos</h2>
 
+<h3>Invitar amigos</h3>
+
 </div>
 ////////////////////////////////////////////////////
 
