--- a/invitados.html
+++ b/invitados.html
@@ -10,7 +10,7 @@
         <h1>BIENVENIDO A <i>EVENTMAKER</i>   </h1>
         <nav>
             <a href="#">Inicio </a>
-            <a href="#">Tutoriales</a>
+            <a href="#">Eventos</a>
             <a href="#">Blog</a>
             <a href="#">Contactos</a>
         </nav>
@@ -18,6 +18,18 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="js/script.js"></script>
+
+    <section>
+
+    </section>
+<footer>
+<!--PIE de Pagina-->
+
+Derechos Reservados &copy;2020 <br>
+EVENTMAKER <br>
+www.eventmaker.com <br>
+</footer>
+
 </body>
 
 
