--- a/Reservacion.html
+++ b/Reservacion.html
@@ -11,7 +11,7 @@
 
 
 <header>
-    <h1>BIENVENIDO A <i>EVENTMAKER</i>   </h1>
+    <h1>RESERVACIONES</i>   </h1>
     <nav>
         <a href="index.html">Inicio </a>
         <a href="invitados.html">Invitados</a>
@@ -20,33 +20,6 @@
         <a href="#">Contactos</a>
     </nav>
 </header>
-
 <body>
 
-<div class= "invitar">
-<h2>Invitar amigos</h2>
-
-
-</div>
-////////////////////////////////////////////////////
-
-</br>
-<div class= "Amigos">
-<h2>Ver amigos</h2>
-</div>
-
-////////////////////////////////////////////////////
-
-</br>
-<div class= "Seguidores">
-<h2>Seguidores</h2>
-</div>
-
-
-
-
 </body>
-
-
-
-</html>
