--- a/Calendario.html
+++ b/Calendario.html
@@ -13,7 +13,7 @@
         <a href="index.html">Inicio </a>
         <a href="invitados.html">Invitados</a>
         <a href="Calendario.html">Calendario</a>
-        <a href="#">Blog</a>
+        <a href="Reservacion.html">Reservacion</a>
         <a href="#">Contactos</a>
     </nav>
 </header>
@@ -29,6 +29,11 @@
         scrolling="no"></iframe>   
      </div>
 
+     
+         <form> 
+             <input type=”date” id=”fecha” name=”fecha” required=”required”> 
+            </form>
+        
     <div class="Principales">
          <h2>Eventos Principales</h2>
     </div>
