--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="index.html">Inicio </a>
             <a href="invitados.html">Invitados</a>
             <a href="Calendario.html">Calendario</a>
-            <a href="#">Blog</a>
+            <a href="Reservacion.html">Reservacion</a>
             <a href="#">Contactos</a>
         </nav>
     
