--- a/Calendario.html
+++ b/Calendario.html
@@ -4,18 +4,28 @@
 <meta charset="UTF-8">
 <title>Calendario</title>
 <link rel="stylesheet" href="css/Calendario.css">
+<script src="https://kit.fontawesome.com/87282fe058.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="js/script.js"></script>
 </head>
+
 <header>
     <h1>BIENVENIDO A EL CALENDARIO DE EVENTOS</h1>
-    <nav>
-        <a href="index.html">Inicio </a>
-        <a href="invitados.html">Invitados</a>
-        <a href="Calendario.html">Calendario</a>
-        <a href="Reservacion.html">Reservacion</a>
-        <a href="#">Contactos</a>
-    </nav>
+    <nav class="redes-sociales">
+        <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+        <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.tiktok.com/"><i class="fab fa-tiktok"></i></a>
+        <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
+    </nav>    
+    <nav class="enlaces">    
+         <a href="index.html">Inicio </a>
+         <a href="invitados.html">Invitados</a>
+         <a href="Calendario.html">Calendario</a>
+         <a href="Reservacion.html">Reservacion</a>
+         <a href="#">Contactos</a>
+        </nav>
+
 </header>
 
 <body>
@@ -78,5 +88,9 @@
 
 
 </body>
+<footer>
 
+<h2>Ma;ana</h2>
+
+</footer>
 </html>
