--- a/index.html
+++ b/index.html
@@ -76,15 +76,6 @@
    
 
 
-    <div class="Imagenes">
-        <h2>Imagenes</h2>
-        <img src="img/2016_mercedes_benz_amg_gt_s-t2.jpg">
-        <img src="img/futbol-1-e1550783405750.jpg"
-        width="400"
-        height="310">
-
-
-    </div>
 
     <div class="Seccion de Invitados">
         <h2>Seccion de Invitados</h2>
@@ -103,12 +94,37 @@
 
     <div class="Mapa">
         <h2>Mapa</h2>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15381.921251390577!2d-87.94275839999999!3d15.458575399999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2shn!4v1596048093679!5m2!1ses!2shn" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1922.1476816964187!2d-88.03786451604466!3d15.522288997733988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTXCsDMxJzIwLjIiTiA4OMKwMDInMTIuNyJX!5e0!3m2!1ses!2shn!4v1596588735249!5m2!1ses!2shn" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>
 
 
     <div class="Testimonios">
         <h2>Testimonios</h2>
+
+        <div class="testimoniales">
+            <div class="testimonial">
+                <blockquote>
+                    <p>El mejor evento del año</p>
+                    <cite>Kazzabe</cite>
+                </blockquote>
+            </div>
+            <div class="testimonial">
+                <blockquote>
+                    <p>Un evento con contenido para toda la familia</p>
+                    <cite>Municipalidad de San Pedro Sula</cite>
+                </blockquote>
+            </div>
+            <div class="testimonial">
+                <blockquote>
+                    <p>Diversion insuperable</p>
+                    <cite>Canal 6</cite>
+                </blockquote>
+            </div>
+        </div>
+
+
+
+
     </div>
 
 
