--- a/Reservacion.html
+++ b/Reservacion.html
@@ -12,7 +12,7 @@
 
 
 <header>
-    <h1>RESERVACIONES</i>   </h1>
+    <h1>Reservacion</i>   </h1>
     <nav class="redes-sociales">
         <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
         <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
