--- a/Reservacion.html
+++ b/Reservacion.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Transicion de encabezado </title>
+<title>RESERVACIONES </title>
 <link rel="stylesheet" href="css/Estilos.css">
+<script src="https://kit.fontawesome.com/87282fe058.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="js/script.js"></script>
 </head>
@@ -12,7 +13,14 @@
 
 <header>
     <h1>RESERVACIONES</i>   </h1>
-    <nav>
+    <nav class="redes-sociales">
+        <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+        <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.tiktok.com/"><i class="fab fa-tiktok"></i></a>
+        <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
+    </nav>   
+    <nav class="enlaces">
         <a href="index.html">Inicio </a>
         <a href="invitados.html">Invitados</a>
         <a href="Calendario.html">Calendario</a>
@@ -22,4 +30,57 @@
 </header>
 <body>
 
+<div>
+    <h2>reservaciones</h2>
+<!-- Content Row -->
+<div class="row">
+ 
+        <div class="card-body">
+          <h2 class="card-title">Card One</h2>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+        </div>
+        <div class="card-footer">
+          <a href="#" class="btn btn-primary btn-sm">More Info</a>
+        </div>
+      </div>
+    </div>
+    <!-- /.col-md-4 -->
+    <div>
+        <div class="card-body">
+            <h2 class="card-title">Card Two</h2>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
+          </div>
+          <div class="card-footer">
+            <a href="#" class="btn btn-primary btn-sm">More Info</a>
+          </div>
+    </div>
+  
+    <!-- /.col-md-4 -->
+    <div>
+        <div>
+            <h2 class="card-title">Card Three</h2>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+          </div>
+          <div class="card-footer">
+            <a href="#" class="btn btn-primary btn-sm">More Info</a>
+          </div>
+
+    </div>
+
+
+<div>
+    <h2>reservacion</h2>
+</div>
+<div>
+    <h2>reservacion</h2>
+</div>
+
+
 </body>
+
+
+
+<footer>
+<h2>Footer</h2>
+
+</footer>
