--- a/index.html
+++ b/index.html
@@ -12,23 +12,25 @@
 
 <header>
     <div class="hero">
+        <div class="ordenar">
+            <nav class="redes-sociales">
+                <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.tiktok.com/"><i class="fab fa-tiktok"></i></a>
+                <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
+            </nav>
+            <nav class="botones">
+                <a href="index.html">Inicio </a>
+                <a href="invitados.html">Invitados</a>
+                <a href="Calendario.html">Calendario</a>
+                <a href="Reservacion.html">Reservacion</a>
+                <a href="#">Contactos</a>
+            </nav>
+        </div>
         <h1>EVENTMAKER</h1>
-        <nav class="redes-sociales">
-            <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
-            <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-            <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.tiktok.com/"><i class="fab fa-tiktok"></i></a>
-            <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
-        </nav>
-        <nav>
-            <a href="index.html">Inicio </a>
-            <a href="invitados.html">Invitados</a>
-            <a href="Calendario.html">Calendario</a>
-            <a href="Reservacion.html">Reservacion</a>
-            <a href="#">Contactos</a>
-        </nav>
-    
     </div>
+    
 </header>
 
 <body>
