--- a/Reservacion.html
+++ b/Reservacion.html
@@ -29,14 +29,19 @@
         <a href="#">Contactos</a>
     </nav>
 </header>
+
+
+
+
+
 <body>
 
-<div style="text-align: center" >
+<div  >
     <h2 >reservaciones</h2>
 </div>  
-<div style="text-align: center;float: left;">
+<div class="reservaciones">
     
-    <div class="reservaciones">
+    <div class="reservacion">
         <h2 class="card-title">pago 1</h2>
         <p class="card-text">Lorem ipsum dolor sit amet, consectetur </p>
         <input type="checkbox"> <label for="cbox2">numero uno</label><br>
@@ -45,7 +50,7 @@
         <a href="#" class="btn btn-primary btn-sm">More Info</a>
     </div>      
   
-    <div class="reservaciones">
+    <div class="reservacion">
         <h2 class="card-title">pago 2</h2>
         <p class="card-text">Lorem ipsum dolor sit amet, consectetur </p> 
         <input type="checkbox"> <label for="cbox2">numero uno</label><br>
@@ -54,7 +59,7 @@
         <a href="#" class="btn btn-primary btn-sm">More Info</a>      
     </div>      
   
-    <div class="reservaciones">
+    <div class="reservacion">
         <h2 class="card-title">pago 3</h2>
         <p class="card-text">Lorem ipsum dolor sit amet, consectetur</p>
         <input type="checkbox"> <label for="cbox2">numero uno</label><br>
@@ -65,7 +70,7 @@
 </div>
 
 
-<div class="reservaciones" style="text-align: center; float: left;" >
+<div class="pagos" >
     <h2 >Pago y Mas</h2>
     <Div class="frmpago">
         <form style="text-align: left; border: 3px grey dashed">
