--- a/Reservacion.html
+++ b/Reservacion.html
@@ -12,7 +12,8 @@
 
 
 <header>
-    <h1>RESERVACIONES</i>   </h1>
+
+    <h1>Reservacion</i>   </h1>
     <nav class="redes-sociales">
         <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
         <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
@@ -28,18 +29,70 @@
         <a href="#">Contactos</a>
     </nav>
 </header>
+
+
+
+
+
 <body>
 
-<div>
-    <h2>reservacion</h2>
+<div  >
+    <h2 >reservaciones</h2>
+</div>  
+<div class="reservaciones">
+    
+    <div class="reservacion">
+        <h2 class="card-title">pago 1</h2>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur </p>
+        <input type="checkbox"> <label for="cbox2">numero uno</label><br>
+        <input type="checkbox"> <label for="cbox2">numero dos</label><br>
+        <input type="checkbox"> <label for="cbox2">numero tres</label><br> 
+        <a href="#" class="btn btn-primary btn-sm">More Info</a>
+    </div>      
+  
+    <div class="reservacion">
+        <h2 class="card-title">pago 2</h2>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur </p> 
+        <input type="checkbox"> <label for="cbox2">numero uno</label><br>
+        <input type="checkbox"> <label for="cbox2">numero dos</label><br>
+        <input type="checkbox"> <label for="cbox2">numero tres</label><br>    
+        <a href="#" class="btn btn-primary btn-sm">More Info</a>      
+    </div>      
+  
+    <div class="reservacion">
+        <h2 class="card-title">pago 3</h2>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur</p>
+        <input type="checkbox"> <label for="cbox2">numero uno</label><br>
+        <input type="checkbox"> <label for="cbox2">numero dos</label><br>
+        <input type="checkbox"> <label for="cbox2">numero tres</label><br> 
+        <a href="#" class="btn btn-primary btn-sm">More Info</a>
+    </div>   
 </div>
 
 
+<div class="pagos" >
+    <h2 >Pago y Mas</h2>
+    <Div class="frmpago">
+        <form style="text-align: left; border: 3px grey dashed">
+            <p>Extra 1: <br><input type="number" name="nombre" size="99"></p>
+            <p>Extra 2: <br><input type="number" name="nacido" min="99"></p>
+            <p>Opciones:
+                <select name="menu">
+                    <option>Uno</option>
+                    <option>Dos</option>
+                    <option>Tres</option>
+                </select>
+            </p>
+            <p>
+            <input type="submit" value="Confirmar">
+            <input type="reset" value="Borrar">
+            </p>
+        </form>
+    </Div>     
+</div>
 </body>
 
-
-
 <footer>
-<h2>Footer</h2>
-
+    <h2>pie de pagina</h2>
 </footer>
+</html>
