--- a/invitados.html
+++ b/invitados.html
@@ -30,28 +30,6 @@
 </header>
 
 <body>
-<<<<<<< HEAD
-    <header>
-        <h1>BIENVENIDO A <i>EVENTMAKER</i>   </h1>
-        <nav>
-            <a href="#">Inicio </a>
-            <a href="#">Eventos</a>
-            <a href="#">Blog</a>
-            <a href="#">Contactos</a>
-        </nav>
-    </header>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="js/script.js"></script>
-
-    <section>
-
-    </section>
-
-
-</body>
-=======
->>>>>>> 4d0a5793abea3ba59eead159b7f3bb029982231c
 
 <div class= "invitar">
 <h2>Invitar amigos</h2>
@@ -71,23 +49,40 @@
 <div class= "Seguidores">
 <h2>Seguidores</h2>
 </div>
-<footer>
-    <!--PIE de Pagina-->
-    
-    Derechos Reservados &copy;2020 <br>
-    EVENTMAKER <br>
-    www.eventmaker.com <br>
-    </footer>
 
 
+
+
+
+
+<!--==========================
+    Footer
+  ============================-->
+  <footer id="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 text-lg-left text-center">
+          <div class="copyright">
+            &copy; Copyright <strong>EVENTMAKER</strong>. All Rights Reserved
+          </div>
+          <div class="credits">
+            
+            Designed by <a href="https://EVENTMAKER.com/">EVENTMAKER</a>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <nav class="footer-links text-lg-right text-center pt-2 pt-lg-0">
+            <a href="index.html" class="scrollto">Inicio</a>
+            <a href="invitados.html" class="scrollto">Invitados</a>
+            <a href="Calendario.html">Calendario</a>
+            <a href="Reservacion.html">Reservacion</a>
+            <a href="#">Contactos</a>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </footer><!-- #footer -->
 
 </body>
 
-
-<footer>
-
-    <div>
-        <h2>Footer</h2>
-    </div>
-</footer>
 </html>
