--- a/Reservacion.html
+++ b/Reservacion.html
@@ -74,10 +74,9 @@
 
 <div class="pagos" >
     <h2 >Pago y Mas</h2>
-    <Div class="frmpago">
-        <form style="text-align: left; border: 3px grey dashed">
+        <form class="reservacion">
             <p>Extra 1: <br><input type="number" name="nombre" size="99"></p>
-            <p>Extra 2: <br><input type="number" name="nacido" min="99"></p>
+            <p>Extra 2: <br><input type="number" name="nacido" min="0"></p>
             <p>Opciones:
                 <select name="menu">
                     <option>Uno</option>
@@ -86,11 +85,10 @@
                 </select>
             </p>
             <p>
-            <input type="submit" value="Confirmar">
-            <input type="reset" value="Borrar">
+            <input style="background-color:orangered;" type="submit" value="Confirmar">
+            <input style="background-color:orangered;" type="reset" value="Borrar">
             </p>
-        </form>
-    </Div>     
+        </form>   
 </div>
 </body>
 
