--- a/Calendario.html
+++ b/Calendario.html
@@ -64,6 +64,7 @@
          </script>
     </div>
   </body> 
+
 <body>
     <div>
         <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=2&amp;bgcolor=%234285F4&amp;ctz=America%2FTegucigalpa&amp;src=M2N0aTYwZWpjOG9lamFqZmx2MGk2MGNlcnNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23C0CA33" 
@@ -107,20 +108,37 @@
 </div>
 ////////////////////////////////////////////////////////
 
-<div>
-    <div class="Generales">
-        <h2>Eventos Publicos</h2>
-       
-        <img src="img/images.png">
-        Campo Agas
+<section class="portafolio">
+  <h2>Eventos Publicos</h2>
+  <div class="portafolio-container">
 
-        <img src="img/65877916_623635204814979_6907276567043375104_o.jpg"
-        display= "inline-block";
-        width= "280px";
-        text-align= "center";
-      >
-          Expocentro
-    </div>
+    <section class="portafolio-item">
+      <img src="img/images.png" alt="" class="portafolio-img">
+      <section class="portafolio-text">
+      <h2>Campo Agas</h2>
+      <p></p>
+      </section>
+    </section>
+  
+    <section class="portafolio-item">
+      <img src="img/65877916_623635204814979_6907276567043375104_o.jpg" alt="" class="portafolio-img">
+      <section class="portafolio-text">
+      <h2>Expocentro</h2>
+      <p></p>
+      </section>
+    </section>
+  
+    <section class="portafolio-item">
+      <img src="img/3.jpg" alt="" class="portafolio-img">
+      <section class="portafolio-text">
+      <h2>Invitado3</h2>
+      <p></p>
+      </section>
+    </section>
+  </div>
+  </section>
+
+<div>
 
 
 </body>
@@ -150,6 +168,7 @@
         </div>
       </div>
     </div>
-</footer><!-- #footer -->
+</footer>
+<!-- #footer -->
 
 </html>
