--- a/Calendario.html
+++ b/Calendario.html
@@ -69,7 +69,7 @@
     <div>
         <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=2&amp;bgcolor=%234285F4&amp;ctz=America%2FTegucigalpa&amp;src=M2N0aTYwZWpjOG9lamFqZmx2MGk2MGNlcnNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23C0CA33" 
         style="border:solid 1px #777" 
-        width="1350" 
+        width="100%" 
         height="600" 
         
         frameborder="0" 
