--- a/Calendario.html
+++ b/Calendario.html
@@ -5,6 +5,8 @@
 <title>Calendario</title>
 <link rel="stylesheet" href="css/Calendario.css">
 <link rel="stylesheet" href="calendar.css">
+<link rel="stylesheet" href="css/prueba.css">
+
 <script src="https://kit.fontawesome.com/87282fe058.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" > </script>
