--- a/Reservacion.html
+++ b/Reservacion.html
@@ -85,8 +85,8 @@
                 </select>
             </p>
             <p>
-            <input style="background-color:orangered;" type="submit" value="Confirmar">
-            <input style="background-color:orangered;" type="reset" value="Borrar">
+            <input class="Pagar"  type="submit" value="Pagar">
+            <input class="Eliminar" type="reset" value="Borrar">
             </p>
         </form>   
 </div>
